[package]
name = "phil-core"
version = "0.2.1"
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
monger-core = "0.13.0"
percent-encoding = "2.1.0"
typed-builder = "0.7.0"
thiserror = "1.0.11"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dev-dependencies]
tempdir = "0.3.7"

[dev-dependencies.uuid]
version = "0.8.1"
features = [ "v4" ]
