[package]
name = "phil-core"
version = "0.4.0"
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
edition = "2018"
readme = "../README.md"
license = "Apache-2.0"
description = "MongoDB cluster initializer"
repository = "https://github.com/saghm/phil"

[dependencies]
monger-core = "0.14.0"
percent-encoding = "2.1.0"
typed-builder = "0.7.0"
thiserror = "1.0.21"
rand = "0.7.3"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]

[dependencies.serde]
version = "1.0.117"
features = ["derive"]

[dev-dependencies]
tempdir = "0.3.7"

[dev-dependencies.uuid]
version = "0.8.1"
features = [ "v4" ]
