[package]
name = "phil"
description = "A CLI orchestration tool for monger"
version = "0.2.1"
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
clap = "2.33.0"
percent-encoding = "2.1.0"
thiserror = "1.0.11"
structopt = "0.3.16"
anyhow = "1.0.32"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]

[dependencies.phil-core]
path = "../phil-core"

[dependencies.self_update]
version = "0.19.0"
default-features = false
features = ["archive-tar", "compression-flate2", "rustls"]
