[package]
name = "phil"
description = "MongoDB cluster initializer"
version = "0.4.0"
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
edition = "2018"
readme = "../README.md"
license = "Apache-2.0"
repository = "https://github.com/saghm/phil"

[dependencies]
clap = "2.33.3"
percent-encoding = "2.1.0"
thiserror = "1.0.21"
structopt = "0.3.20"
anyhow = "1.0.33"
phil-core = "0.4.0"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]

[dependencies.self_update]
version = "0.20.0"
default-features = false
features = ["archive-tar", "compression-flate2", "rustls"]
